# identity-factory-api

./: .coverage  .flake8  .gitignore  CONTRIBUTIONS_2026-02-06.md  Dockerfile  ISSUE_identity_growth_300plus_dtw.md  ISSUE_skeleton_chain_qa.md  ISSUE_wire_shuffler_waksman.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  start_api.py  test_local_mixing.py
db_exports/skeleton_ids_n4_n7.lmdb/: data.mdb
db_exports/wire_shuffler.lmdb/: data.mdb
docs/: API_REFERENCE.md  README.md  WIRE_SHUFFLER_DB_PLAN.md
identity_factory/: __init__.py  __main__.py  cli.py  database.py  debris_cancellation.py  experiment_runner.py  factory_manager.py  gate57_library.json  inverse_finder.py  irreducible_db.py  irreducible_generator.py  job_queue.py  local_mixing_utils.py  ml_features.py  post_processor.py  rainbow_compressor.py  seed_generator.py  unroller.py  wire_shuffler_db.py
identity_factory/api/: __init__.py  advanced_endpoints.py  automation_endpoints.py  client.py  cluster_endpoints.py  db_paths.py  db_status_endpoints.py  eca57_lmdb_endpoints.py  endpoints.py  experiment_endpoints.py  experiment_models.py  generation_worker.py  generator_endpoints.py  go_database_endpoints.py  identity_browser_endpoints.py  imported_identity_endpoints.py  irreducible_endpoints.py  local_mixing_endpoints.py  local_mixing_models.py  models.py  perm_db_endpoints.py  sat_database_endpoints.py  server.py  skeleton_db_endpoints.py  unified_search_endpoints.py  waksman_endpoints.py  wire_shuffler_endpoints.py
identity_factory/automation/: __init__.py  scheduler.py
identity_factory/circuits/: __init__.py  cli.py  formats.py
identity_factory/generators/: __init__.py  base.py  eca57_identity_miner.py  go_enumerator.py  registry.py  sat_forward_inverse.py  skeleton_generator.py
scripts/: backfill_wire_shuffler_metrics.py  import_big_identities.py  import_swap_flip_gadgets.py  import_wire_shuffler.py  scan_reducible_circuits.py
share/: .gitignore  README.md  import_waksman_circuits.py  merge_skeleton_identities_lmdb.py  waksman_circuits_export_2026-02-06.json  wire_shuffler.db
share/issue_assets/: README.md  checksums_sha256.txt  share_tree.txt  skeleton_db_stats.txt  skeleton_identity_verify.txt  waksman_circuits_verify.txt  waksman_db_summary.txt
tests/: test_integration.py  test_runner_integration.py
tests/unit/: test_experiment_history_endpoints.py
